Code cleanup (IntelliJ)