@@ -123,7 +123,7 @@ public class ComponentParticipation extends HttpServlet {
         List<BeamDestination> selectedDestinationList = null;
 
         if (selectedDestination != null) {
-            selectedDestinationList = Arrays.asList(selectedDestination);
+            selectedDestinationList = List.of(selectedDestination);
         }
 
         String filters
